# Conways-Game-Of-Life

./: .gitignore  Cargo.toml  README.md  main.py  package-lock.json  package.json  verlet_stuff.py
example/: index.ts  init.ts
extension/: Cargo.toml
extension/src/: lib.rs
game_of_life/: grid.py  models.py  rules_engine.py  simulation.py
